# musrec

./: README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
apple/: main.py  recorder.py  tracks.py
musrec/: config.py  main.py  recorder.py  tracks.py
musrec/config/: config.json
